--- a/SSHFS/sshfsAdvanced.xib
+++ b/SSHFS/sshfsAdvanced.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.02">
 	<data>
 		<int key="IBDocument.SystemTarget">1050</int>
-		<string key="IBDocument.SystemVersion">9C31</string>
-		<string key="IBDocument.InterfaceBuilderVersion">644</string>
+		<string key="IBDocument.SystemVersion">9C7010</string>
+		<string key="IBDocument.InterfaceBuilderVersion">648</string>
 		<string key="IBDocument.AppKitVersion">949.26</string>
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1"/>
+			<integer value="1" id="9"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -34,7 +34,7 @@
 					<object class="NSTextField" id="863786194">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{141, 108}, {96, 22}}</string>
+						<string key="NSFrame">{{151, 158}, {96, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="537489971">
@@ -68,18 +68,18 @@
 							</object>
 						</object>
 					</object>
-					<object class="NSTextField" id="45189873">
+					<object class="NSTextField" id="556176002">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{92, 110}, {38, 17}}</string>
+						<string key="NSFrame">{{10, 30}, {124, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="387916204">
+						<object class="NSTextFieldCell" key="NSCell" id="467627756">
 							<int key="NSCellFlags">67239488</int>
-							<int key="NSCellFlags2">272630784</int>
-							<string key="NSContents">Port:</string>
+							<int key="NSCellFlags2">71304192</int>
+							<string key="NSContents">Extra Options:</string>
 							<reference key="NSSupport" ref="313162402"/>
-							<reference key="NSControlView" ref="45189873"/>
+							<reference key="NSControlView" ref="556176002"/>
 							<object class="NSColor" key="NSBackgroundColor" id="814842477">
 								<int key="NSColorSpace">6</int>
 								<string key="NSCatalogName">System</string>
@@ -97,59 +97,26 @@
 							</object>
 						</object>
 					</object>
-					<object class="NSButton" id="255994399">
+					<object class="NSTextField" id="45189873">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{75, 77}, {151, 18}}</string>
+						<string key="NSFrame">{{96, 160}, {38, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="208369830">
-							<int key="NSCellFlags">-1543373312</int>
-							<int key="NSCellFlags2">0</int>
-							<string key="NSContents">Enable Compression</string>
+						<object class="NSTextFieldCell" key="NSCell" id="387916204">
+							<int key="NSCellFlags">67239488</int>
+							<int key="NSCellFlags2">272630784</int>
+							<string key="NSContents">Port:</string>
 							<reference key="NSSupport" ref="313162402"/>
-							<reference key="NSControlView" ref="255994399"/>
-							<int key="NSButtonFlags">1211912703</int>
-							<int key="NSButtonFlags2">2</int>
-							<object class="NSCustomResource" key="NSNormalImage" id="347815924">
-								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">NSSwitch</string>
-							</object>
-							<object class="NSButtonImageSource" key="NSAlternateImage" id="978380299">
-								<string key="NSImageName">NSSwitch</string>
-							</object>
-							<string key="NSAlternateContents"/>
-							<string key="NSKeyEquivalent"/>
-							<int key="NSPeriodicDelay">200</int>
-							<int key="NSPeriodicInterval">25</int>
-						</object>
-					</object>
-					<object class="NSButton" id="312178625">
-						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{75, 57}, {151, 18}}</string>
-						<reference key="NSSuperview" ref="1005"/>
-						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="367556294">
-							<int key="NSCellFlags">-1543373312</int>
-							<int key="NSCellFlags2">0</int>
-							<string key="NSContents">Follow symlinks</string>
-							<reference key="NSSupport" ref="313162402"/>
-							<reference key="NSControlView" ref="312178625"/>
-							<int key="NSButtonFlags">1211912703</int>
-							<int key="NSButtonFlags2">2</int>
-							<reference key="NSNormalImage" ref="347815924"/>
-							<reference key="NSAlternateImage" ref="978380299"/>
-							<string key="NSAlternateContents"/>
-							<string key="NSKeyEquivalent"/>
-							<int key="NSPeriodicDelay">200</int>
-							<int key="NSPeriodicInterval">25</int>
+							<reference key="NSControlView" ref="45189873"/>
+							<reference key="NSBackgroundColor" ref="814842477"/>
+							<reference key="NSTextColor" ref="904141735"/>
 						</object>
 					</object>
 					<object class="NSTextField" id="974176271">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{121, 20}, {159, 22}}</string>
+						<string key="NSFrame">{{151, 27}, {157, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="374513261">
@@ -163,24 +130,57 @@
 							<reference key="NSTextColor" ref="360809257"/>
 						</object>
 					</object>
-					<object class="NSTextField" id="556176002">
+					<object class="NSButton" id="312178625">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{-12, 22}, {124, 17}}</string>
+						<string key="NSFrame">{{98, 94}, {151, 18}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="467627756">
-							<int key="NSCellFlags">67239488</int>
-							<int key="NSCellFlags2">71304192</int>
-							<string key="NSContents">Extra Options:</string>
+						<object class="NSButtonCell" key="NSCell" id="367556294">
+							<int key="NSCellFlags">-1543373312</int>
+							<int key="NSCellFlags2">0</int>
+							<string key="NSContents">Follow symlinks</string>
 							<reference key="NSSupport" ref="313162402"/>
-							<reference key="NSControlView" ref="556176002"/>
-							<reference key="NSBackgroundColor" ref="814842477"/>
-							<reference key="NSTextColor" ref="904141735"/>
+							<reference key="NSControlView" ref="312178625"/>
+							<int key="NSButtonFlags">1211912703</int>
+							<int key="NSButtonFlags2">2</int>
+							<object class="NSCustomResource" key="NSNormalImage" id="382466404">
+								<string key="NSClassName">NSImage</string>
+								<string key="NSResourceName">NSSwitch</string>
+							</object>
+							<object class="NSButtonImageSource" key="NSAlternateImage" id="978380299">
+								<string key="NSImageName">NSSwitch</string>
+							</object>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+					</object>
+					<object class="NSButton" id="255994399">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{98, 114}, {151, 18}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="208369830">
+							<int key="NSCellFlags">-1543373312</int>
+							<int key="NSCellFlags2">0</int>
+							<string key="NSContents">Enable Compression</string>
+							<reference key="NSSupport" ref="313162402"/>
+							<reference key="NSControlView" ref="255994399"/>
+							<int key="NSButtonFlags">1211912703</int>
+							<int key="NSButtonFlags2">2</int>
+							<reference key="NSNormalImage" ref="382466404"/>
+							<reference key="NSAlternateImage" ref="978380299"/>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
 						</object>
 					</object>
 				</object>
-				<string key="NSFrameSize">{300, 150}</string>
+				<string key="NSFrameSize">{350, 200}</string>
 				<reference key="NSSuperview"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -245,9 +245,9 @@
 								</object>
 								<object class="NSMutableArray" key="dict.values">
 									<bool key="EncodedWithXMLCoder">YES</bool>
-									<integer value="1" id="5"/>
+									<reference ref="9"/>
 									<integer value="0" id="6"/>
-									<reference ref="5"/>
+									<reference ref="9"/>
 									<reference ref="6"/>
 									<reference ref="6"/>
 									<reference ref="6"/>
@@ -255,7 +255,7 @@
 									<string/>
 									<string/>
 									<string>None specified</string>
-									<reference ref="5"/>
+									<reference ref="9"/>
 									<reference ref="6"/>
 								</object>
 							</object>
@@ -300,11 +300,11 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="863786194"/>
-							<reference ref="45189873"/>
-							<reference ref="255994399"/>
-							<reference ref="312178625"/>
-							<reference ref="974176271"/>
 							<reference ref="556176002"/>
+							<reference ref="45189873"/>
+							<reference ref="974176271"/>
+							<reference ref="312178625"/>
+							<reference ref="255994399"/>
 						</object>
 						<reference key="parent" ref="1002"/>
 					</object>
@@ -408,9 +408,10 @@
 					<string>-3.IBPluginDependency</string>
 					<string>1.IBEditorWindowLastContentRect</string>
 					<string>1.IBPluginDependency</string>
+					<string>1.IBViewEditorWindowController.showingBoundsRectangles</string>
+					<string>1.IBViewEditorWindowController.showingLayoutRectangles</string>
 					<string>1.WindowOrigin</string>
 					<string>1.editorWindowContentRectSynchronizationRect</string>
-					<string>1.lastResizeAction</string>
 					<string>2.IBPluginDependency</string>
 					<string>23.IBPluginDependency</string>
 					<string>24.IBPluginDependency</string>
@@ -429,23 +430,12 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilderKit</string>
 					<string>com.apple.InterfaceBuilderKit</string>
-					<string>{{0, 1395}, {300, 150}}</string>
+					<string>{{266, 409}, {350, 200}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<integer value="1" id="5"/>
+					<reference ref="5"/>
 					<string>{628, 654}</string>
 					<string>{{264, 790}, {300, 150}}</string>
-					<object class="NSDictionary">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSMutableArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>IBResizeActionFinalFrame</string>
-							<string>IBResizeActionInitialFrame</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>{{0, 1395}, {300, 150}}</string>
-							<string>{{0, 1395}, {300, 150}}</string>
-						</object>
-					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -480,7 +470,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">43</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
